@@ -42,6 +42,9 @@ VERSION 2.3.2-Beta 1
       Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Fix regression in Dynamic Collections. For files that were scanned when
+      Dynamic Collections wasn't working, you will need to rescan them to get
+      them associated with the proper device.
     * Fix crash on exit with newer KDE versions. Patch by Martin Blumenstingl and Felix
       Geyer. (BR 245513)
     * Fixed playlist bottom toolbar getting to tall when using "Text only"
